Added logo to stream three. Fixed bugs in stream one and two

--- a/stream-two.html
+++ b/stream-two.html
@@ -17,10 +17,16 @@
     </nav>
     <h1>Stream Two</h1>
     <div class="card">
-       <a href="https://en.wikipedia.org/wiki/HTML5" target="_blank">
-            <img src="https://www.seoclerk.com/pics/want55033-1LAR5w1506595825.png" alt="HTML5">
-       </a>
-       <h2>HTML5</h2> 
+        <a href="https://en.wikipedia.org/wiki/HTML5" target="_blank">
+            <img src="https://www.seoclerk.com/pics/want55033-1LAR5w1506595825.png" alt="HTML5"/>
+            <h2>HTML 5</h2>
+        </a> 
+    </div>
+    <div class="card">
+        <a href="https://en.wikipedia.org/wiki/Cascading_Style_Sheets" target="_blank">
+            <img src="https://basicuse.net/var/plain_site/storage/images/articles/pl/textile/html_css/simple_css3_gallery_with_zoom_effect/6885-1-eng-GB/simple_css3_gallery_with_zoom_effect_view_line_image.jpg" alt="CSS3">
+            <h2>CSS3</h2>
+        </a>
     </div>
 </body>
 </html>
